--- a/package.json
+++ b/package.json
@@ -5,10 +5,7 @@
   "main": "index.js",
   
   "scripts": {
-    "test": "jest",
-    "bn": "babel-node ./app/app.js",
-    "build": "NODE_ENV=production babel src --out-dir dist --source-maps inline",
-    "prepublishOnly": "npm run build"
+    "run-local": "babel-node ./src/app/app.js"
   },
   "author": "",
   "license": "ISC",
