--- a/package.json
+++ b/package.json
@@ -26,7 +26,12 @@
     "jest-cli": "^28.1.3"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^16.0.2",
     "express": "^4.18.1",
-    "pug": "^3.0.2"
+    "jsonwebtoken": "^8.5.1",
+    "pg": "^8.8.0",
+    "pug": "^3.0.2",
+    "sequelize": "^6.21.4"
   }
 }
